Fix `formData.name` condition in `validateStep1`, update watermark link, create `robots.txt`, and add media query to increase font size on screens with a min-height of 1400px for better readability.

--- a/src/index.css
+++ b/src/index.css
@@ -808,3 +808,9 @@ label:has(p:nth-of-type(2)) p:first-of-type {
     padding: 5rem 1.25rem;
   }
 }
+
+@media screen and (min-height: 1400px) {
+  html {
+    font-size: 18px;
+  }
+}
